FIX wrong size element  /customize

--- a/src/components/Layout/Footer/footer.module.scss
+++ b/src/components/Layout/Footer/footer.module.scss
@@ -269,6 +269,7 @@ footer#main-footer {
 
         .newsletter {
             background: url('./../../../assets/img/newsletter-bg.png') no-repeat center top;
+            background-size: cover;
 
             h2 {
                 display: block;
